--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Rúv fréttir</h1>
     </header>
     <main>
-        <button id="testbutton">test</button>
+        <!-- <button onclick="console.log(window.location)">test</button> -->
     </main>
     <footer>
         <p>Fréttir frá <a href="https://www.ruv.is/">RÚV</a>.</p>
