--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="script.js"></script>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css" />
     <title>Fréttaveita</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Rúv fréttir</h1>
+      <h1>Rúv fréttir</h1>
     </header>
     <main>
-        <!-- <button onclick="console.log(window.location)">test</button> -->
+      <!-- <button onclick="console.log(window.location)">test</button> -->
     </main>
     <footer>
-        <p>Fréttir frá <a href="https://www.ruv.is/">RÚV</a>.</p>
+      <p>Fréttir frá <a href="https://www.ruv.is/">RÚV</a></p>
     </footer>
-</body>
+  </body>
 </html>
