Aðeins finishing touches á css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- <button onclick="console.log(window.location)">test</button> -->
     </main>
     <footer>
-      <p>Fréttir frá <a href="https://www.ruv.is/">RÚV</a></p>
+      <p>Kóði á <a href="https://github.com/ofurtumi/Verkefni-9-vefforritun" target="blank">Github</a> | Fréttir frá <a href="https://www.ruv.is/">RÚV</a></p>
     </footer>
   </body>
 </html>
